--- a/viewsletter/index.html
+++ b/viewsletter/index.html
@@ -33,6 +33,13 @@
           margin: 10vh auto;
         }
       }
+
+      @media (max-width: 600px) {
+        body {
+          width: 100%;
+          margin: 2vh auto;
+        }
+      }
     </style>
   </head>
 
