--- a/viewsletter/index.html
+++ b/viewsletter/index.html
@@ -37,7 +37,7 @@
       @media (max-width: 600px) {
         body {
           width: 100%;
-          margin: 2vh auto;
+          margin: 0 auto;
         }
       }
     </style>
